Changed pom to allow failsafe plugin to do tests with reflection (#7)